tests/snapshots/examples_fixtures/base__base_duplicate_except_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_duplicate_except_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E079]: INVALID BASE DIRECTIVE

Duplicate Base exclusion `print`.

  --> examples/base/base_duplicate_except_error.flx:3:1
  |
3 | import Base except [print, print]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Each name in `import Base except [...]` must appear only once.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> examples/base/base_duplicate_except_error.flx:4:1
  |
4 | Base.print("unreachable");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------- expected () -> Unit, found () -> Unit with IO

Found 2 errors.
== stdout ==
<not executed>
